--- a/.env.example
+++ b/.env.example
@@ -32,7 +32,9 @@ GITHUB_CALLBACK_URL_DEVELOPMENT=https://your-railway-app-url/auth/github/callbac
 GOOGLE_CLIENT_ID=38094834439-ipp6dkk73l6p716r0kgg03mmb7s5btag.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
 GOOGLE_CALLBACK_URL_PRODUCTION=http://localhost:8080/auth/google/callback
-GOOGLE_CALLBACK_URL_DEVELOPMENT=https://your-railway-app-url/auth/google/callback
+GOOGLE_CALLBACK_URL_DEVELOPMENT=https://e-commerce-fullbackend-production.up.railway.app/auth/google/callback
+GOOGLE_CLIENT_ID_DEVELOPMENT=38094834439-4ugf60f4aun6d49faj3t2a6350srchja.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET_DEVELOPMENT=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
 
 # Admin credentials
 ADMIN_EMAIL=juliocesarcisnerosrosales@gmail.com
